--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -53,7 +53,9 @@ javac.classpath=\
     ${file.reference.commons-fileupload-1.3.1.jar}:\
     ${file.reference.commons-io-2.4.jar}:\
     ${file.reference.commons-logging-1.1.3.jar}:\
-    ${file.reference.mysql-connector-java-5.0.8-bin.jar}
+    ${file.reference.mysql-connector-java-5.0.8-bin.jar}:\
+    ${libs.javaee-web-api-7.0.classpath}:\
+    ${libs.hibernate4-support.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
