--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,6 +38,7 @@ excludes=
 file.reference.commons-fileupload-1.3.1.jar=../../Dropbox/www.damiciristrutturazioni.it/TEMP/commons-fileupload-1.3.1.jar
 file.reference.commons-io-2.4.jar=../../Dropbox/www.damiciristrutturazioni.it/TEMP/commons-io-2.4.jar
 file.reference.commons-logging-1.1.3.jar=../../Dropbox/www.damiciristrutturazioni.it/TEMP/commons-logging-1.1.3.jar
+file.reference.mail.jar=TEMP\\mail.jar
 file.reference.mysql-connector-java-5.0.8-bin.jar=../../Dropbox/www.damiciristrutturazioni.it/TEMP/mysql-connector-java-5.0.8-bin.jar
 includes=**
 j2ee.compile.on.save=true
@@ -55,7 +56,8 @@ javac.classpath=\
     ${file.reference.commons-logging-1.1.3.jar}:\
     ${file.reference.mysql-connector-java-5.0.8-bin.jar}:\
     ${libs.javaee-web-api-7.0.classpath}:\
-    ${libs.hibernate4-support.classpath}
+    ${libs.hibernate4-support.classpath}:\
+    ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
