--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,16 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.aopalliance-1.0.jar=TEMP/lib/aopalliance-1.0.jar
+file.reference.aspectj-1.6.9.jar=TEMP/lib/aspectj-1.6.9.jar
+file.reference.aspectj-weaver.jar=TEMP/lib/aspectj-weaver.jar
+file.reference.aspectjrt-1.6.0.jar=TEMP/lib/aspectjrt-1.6.0.jar
 file.reference.commons-fileupload-1.3.1.jar=../../Dropbox/www.damiciristrutturazioni.it/TEMP/commons-fileupload-1.3.1.jar
 file.reference.commons-io-2.4.jar=../../Dropbox/www.damiciristrutturazioni.it/TEMP/commons-io-2.4.jar
 file.reference.commons-logging-1.1.3.jar=../../Dropbox/www.damiciristrutturazioni.it/TEMP/commons-logging-1.1.3.jar
 file.reference.mail.jar=TEMP\\mail.jar
 file.reference.mysql-connector-java-5.0.8-bin.jar=../../Dropbox/www.damiciristrutturazioni.it/TEMP/mysql-connector-java-5.0.8-bin.jar
+file.reference.spring-aop-4.0.5.RELEASE.jar=TEMP/lib/spring-aop-4.0.5.RELEASE.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -57,7 +62,12 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.0.8-bin.jar}:\
     ${libs.javaee-web-api-7.0.classpath}:\
     ${libs.hibernate4-support.classpath}:\
-    ${file.reference.mail.jar}
+    ${file.reference.mail.jar}:\
+    ${file.reference.aspectj-weaver.jar}:\
+    ${file.reference.aspectj-1.6.9.jar}:\
+    ${file.reference.aspectjrt-1.6.0.jar}:\
+    ${file.reference.spring-aop-4.0.5.RELEASE.jar}:\
+    ${file.reference.aopalliance-1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -68,7 +78,8 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
